[package]
name = "apt-edsp"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"
description = "A Rust data model of the APT External Dependency Solver Protocol."

[dependencies]
rfc822-like = "0.2.2"
serde = { version = "1.0", features = ["derive"] }
log = "0.4.22"
nom = "7"

[dev-dependencies]
indoc = "2"
