[package]
name = "apt-edsp"
version = "0.3.0"
edition = "2021"
license = "BSD-3-Clause"
description = "A Rust data model of the APT External Dependency Solver Protocol."
repository = "https://github.com/eviltak/apt-edsp-rs"
readme = "README.md"
exclude = [".github", ".idea", ".release-plz.toml", "commitlint.config.mjs"]

[dependencies]
rfc822-like = "0.2.2"
thiserror = "1"
serde = { version = "1.0", features = ["derive"] }
nom = "7"

[dev-dependencies]
indoc = "2"
